@@ -1,2 +1,5 @@
 # 3WayDuel
 3WayDuel Paradox Project
+
+
+Use ```java -jar --enable-preview``` to run the program
